--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
     "dotenv": "^16.0.3",
-    "google-auth-library": "^8.5.2",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "open": "^8.4.0",
+    "server-destroy": "^1.0.1"
   }
 }
